# poker

./: .dockerignore  .gitignore  Cargo.toml  DEPLOY.md  Dockerfile  INSTALLATION.md  README.md  run-demo.sh  run-server.sh  start-bots.sh  start-java-bot.sh  stop-bots.sh
docs/: API.md  BOT_DEVELOPMENT.md  QUICK_START.md  TOURNAMENT.md
examples/: bot_example.py
examples/js-bots/: README.md  bot_aggressive.ts  bot_conservative.js  package-lock.json  package.json
java-bot/: README.md  dependency-reduced-pom.xml  pom.xml
java-bot/src/main/java/com/poker/bot/: BotMain.java  IntelligentBot.java
java-bot/src/main/java/com/poker/bot/api/: GameState.java  PokerApiClient.java
java-bot/src/main/java/com/poker/bot/engine/: Card.java  HandEvaluator.java  HandRank.java  ProbabilityCalculator.java
java-bot/src/test/java/com/poker/bot/engine/: CardTest.java  HandEvaluatorTest.java  ProbabilityCalculatorTest.java
poker-engine/: Cargo.toml
poker-engine/examples/: demo.rs
poker-engine/src/: card.rs  deck.rs  game.rs  hand.rs  lib.rs
poker-server/: Cargo.toml
poker-server/src/: api.rs  auth.rs  game_manager.rs  main.rs  models.rs
poker-ui/: game.js  index.html  style.css
